--- a/index.html
+++ b/index.html
@@ -8,17 +8,25 @@
 <body>
 
 	<div id="container">
-		<div id="header"></div>
+		<div id="header">
+			<h1>Header</h1>
+		</div>
 		<div class="sidebar">
+			<h3>Sidebar</h3>
 			<div class="small-box"></div>
 			<div class="small-box"></div>
 			<div class="small-box"></div>
 		</div>
-		<div id="main-story"></div>
+		<div id="main-story">
+			<h3>Article</h3>
+		</div>
 		<div class="sidebar">
+			<h3>Sidebar</h3>
 			<div class="long-box"></div>
 		</div>
-		<div id="footer"></div>
+		<div id="footer">
+			<h3>Footer</h3>
+		</div>
 
 	</div>
 
